add folders and remove names

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,20 +21,20 @@ services:
 
   web1:
     image: nginx
-    container_name: web1
-    hostname: web1
     labels:
       - traefik.enable=true
       - traefik.http.routers.web1.entrypoints=web
       - traefik.http.routers.web1.rule=Host(`web1.local.es`)
       # - traefik.http.routers.web1.tls=true
       # - traefik.http.routers.web1.tls.certresolver=production
+    volumes:
+      - ./web1:/usr/share/nginx/html
 
   web2:
     image: nginx
-    container_name: web2
-    hostname: web2
     labels:
       - traefik.enable=true
       - traefik.http.routers.web2.entrypoints=web
       - traefik.http.routers.web2.rule=Host(`web2.local.es`)
+    volumes:
+      - ./web2:/usr/share/nginx/html
